--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,17 @@ before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -q
   - sudo apt-get install g++-4.8 -y
+before_deploy:
+  - export RELEASE_PKG_FILE=$(ls *.txt)
+  - echo "deploying $RELEASE_PKG_FILE to GitHub releases"
+deploy:
+  provider: releases
+  api_key:
+    secure: YOUR_ENCRYPTED_API_KEY
+  file_glob: true
+  file: "${RELEASE_PKG_FILE}"
+  on:
+    tags: true
 compiler: gcc
 env: COMPILER=g++-4.8
 script: ./run_test.sh
